# pndev

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  bors.toml  shell.nix
.github/workflows/: automerge.yml  release.yml  test.yml
catalog/: docker-compose.yml
catalog/docker/: Dockerfile.nginx-minimal  Dockerfile.postgres  init-user-db.sh  nginx-minimal.conf
nix/: sources.json
src/: check.rs  command.rs  config.rs  git.rs  main.rs  opt_log.rs  parse.rs  shell.rs  update.rs
