[package]
name = "pndev"
version = "0.3.5"
authors = ["Mattia Gheda <ghedamat@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# arg parsing
structopt = "0.3.14"
clap-verbosity-flag = "0.3.1"

# error handling
failure = "0.1.5"
exitfailure = "0.5.1"

# output
ansi_term = "0.12"

# logging
log = "0.4.8"
env_logger = "0.6.2"

# doctor
dns-lookup = "1.0.1"
sys-info = "0.5.8"

# dirs
dirs = "2.0"

self_update = "0.7"

confy = "0.3.1"

error-chain = "0.12.1"

toml = "0.5.6"

dialoguer = "0.6.2"

lazy_static = "1.4.0"
regex = "1.4.3"
open = "1.4.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]
